[gd_scene load_steps=2 format=3 uid="uid://dnwcqm8u82hhd"]

[ext_resource type="Script" uid="uid://cp4qggdnshfxn" path="res://shared/ui/component/panels/templates/sub_view_selector.gd" id="1"]

[node name="SubViewSelector" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1")

[node name="TopBar" type="HBoxContainer" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
size_flags_horizontal = 3

[node name="SubViewContainer" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
